--- a/programmieren lernen/python/arbeitsblaetter/00 - Python zuhause.tex
+++ b/programmieren lernen/python/arbeitsblaetter/00 - Python zuhause.tex
@@ -31,7 +31,7 @@
 	Weil Python kostenlos verfügbar ist und von so vielen Programmierern benutzt wird, gibt es im Internet besonders viele \emph{Wikis, Foren, Anleitungen und sogar ganze Bücher}. So bekommt man viel Hilfe beim Lernen – vom ersten Befehl bis hin zu komplizierten Programmen.
 	
 	\begin{enumerate}
-		\item Ein komplettes \emph{offizielles Tutorial} in deutsch gibt es unter \url{http://tutorial.pocoo.org/}. Wenn du Python schon installiert hast, kannst du gleich mit dem dritten Kapitel \enquote{\emph{Eine informelle Einführung in Python}} loslegen. Ab hier werden die wichtigsten Dinge, die man zum Programmieren braucht, Schritt für Schritt erklärt. Die Original-Version in englisch findest du unter \url{http://docs.python.org/py3k/tutorial/index.html}.
+		\item Ein komplettes \emph{offizielles Tutorial} in deutsch gibt es unter \url{https://tutorial.pocoo.org/}. Wenn du Python schon installiert hast, kannst du gleich mit dem dritten Kapitel \enquote{\emph{Eine informelle Einführung in Python}} loslegen. Ab hier werden die wichtigsten Dinge, die man zum Programmieren braucht, Schritt für Schritt erklärt. Die Original-Version in englisch findest du unter \url{http://docs.python.org/py3k/tutorial/index.html}.
 		
 		\item Gleich ein ganzes \emph{Buch extra für Kids} (\enquote{Schlangengerangel für
 Kinder}) kannst du dir unter \url{https://code.google.com/p/swfk-de/downloads/list} herunterladen.
